--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "multer": "^1.4.5-lts.1",
     "postcss": "^8.4.20",
     "postcss-cli": "^10.1.0",
+    "sharp": "^0.31.3",
     "tailwindcss": "^3.2.4",
     "validator": "^13.7.0"
   }
