--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
     "express-session": "^1.17.3",
+    "http-status-codes": "^2.2.0",
     "mongoose": "^6.8.0",
     "multer": "^1.4.5-lts.1",
     "postcss": "^8.4.20",
