--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "postcss": "^8.4.20",
     "postcss-cli": "^10.1.0",
     "sharp": "^0.31.3",
+    "stripe": "^11.6.0",
     "tailwindcss": "^3.2.4",
     "validator": "^13.7.0"
   },
