--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "devcss": "postcss public/styles/tailwind.css -o public/styles/style.css -w",
-    "dev": " nodemon index.js"
+    "dev": " nodemon index.js",
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
