--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.1",
     "connect-ensure-login": "^0.1.1",
+    "cookie-session": "^2.0.0",
     "country-state-city": "^3.1.2",
     "currency-list": "^1.0.8",
     "dotenv": "^16.0.3",
